--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.0",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.0.0-beta.5",
+    "react-dom": "17.0.2",
+    "react-multilevel-dropdown": "^2.0.0",
+    "reactjs-navbar": "^1.0.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
