--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "bootstrap": "^5.1.0",
+    "mdbreact": "^5.1.0",
     "next": "11.0.1",
+    "next-compose-plugins": "^2.2.1",
+    "next-fonts": "^1.5.1",
+    "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "17.0.2",
