--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^5.1.0",
+    "dotenv": "^10.0.0",
     "mdbreact": "^5.1.0",
     "next": "11.0.1",
     "next-compose-plugins": "^2.2.1",
     "next-fonts": "^1.5.1",
     "next-images": "^1.8.1",
-    "react": "17.0.2",
+    "nodemailer": "^6.6.3",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.5",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.6.5",
     "react-multilevel-dropdown": "^2.0.0",
-    "reactjs-navbar": "^1.0.2"
+    "react-responsive-carousel": "^3.2.21",
+    "react-slick": "^0.28.1",
+    "reactjs-navbar": "^1.0.2",
+    "reactstrap": "^8.9.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
